--- a/04-chap4.qmd
+++ b/04-chap4.qmd
@@ -193,7 +193,7 @@ The results has two constraints for $Y_t$. First, the mean of $Y_t$ exists if $\
 
 ### Variance and the stationary condition of AR (1) process
 
-First take variance of both sides of Equation \@ref(eq:ar)
+First take variance of both sides of Equation @eq-ar
 
 $$Var(Y_t)=Var(\phi_0+\phi_1 Y_{t-1}+\epsilon_t)$$
 
@@ -205,7 +205,7 @@ Under the stationarity condition, $Var(Y_t)=Var(Y_{t-1})$. Hence,
 
 $$Var(Y_t)=\frac{\sigma^2}{1-\phi_1^2}.$$
 
-provided that $\phi_1^2 < 1$ or $|\phi_1| < 1$ (The variance of a random variable is bounded and non-negative). The necessary and sufficient condition for the $AR(1)$ model in Equation \@ref(eq:ar) to be weakly stationary is $|\phi_1| < 1$. This condition is equivalent to saying that the root of $1-\phi_1B = 0$ must lie outside the unit circle. This can be explained as below
+provided that $\phi_1^2 < 1$ or $|\phi_1| < 1$ (The variance of a random variable is bounded and non-negative). The necessary and sufficient condition for the $AR(1)$ model in Equation @eq-ar to be weakly stationary is $|\phi_1| < 1$. This condition is equivalent to saying that the root of $1-\phi_1B = 0$ must lie outside the unit circle. This can be explained as below
 
 Using the backshift notation we can write $AR(1)$ process as 
 
@@ -238,14 +238,14 @@ Now we have
 
 ### Autocorrelation function of an AR(1) process
 
-To derive autocorrelation function of an AR(1) process we first multiply both sides of Equation \@ref(eq:ar) by $Y_{t-k}$ and take expected values:
+To derive autocorrelation function of an AR(1) process we first multiply both sides of Equation @eq-ar by $Y_{t-k}$ and take expected values:
 
 $$E(Y_tY_{t-k})=\phi_0E(Y_{t-k})+\phi_1 E(Y_{t-1}Y_{t-k})+E(\epsilon_tY_{t-k})$$
-Since $\epsilon_t$ and $Y_{t-k}$ are independent and using the results in Equation \@ref(eq:3)
+Since $\epsilon_t$ and $Y_{t-k}$ are independent and using the results in Equation @eq-3
 
 $$\gamma_k + \mu^2 = \phi_0 \mu+\phi_1(\gamma_{k-1}+\mu^2)$$
 
-Substituting the results in Equation \@ref(eq:2) to Equation \@ref(eq:3) we get
+Substituting the results in Equation @eq-2 to Equation @eq-3 we get
 
 \begin{equation}
 \gamma_k = \phi_1 \gamma_{k-1}.
@@ -310,7 +310,7 @@ Solve it until you obtain the Eq. (a) as shown below.
 \gamma_0 (1-\phi_1^2 - \phi_2^2) = 2\phi_1\phi_2\gamma_1+\sigma^2.
 \end{equation}
 
-Next multiply both sides of Equation \@ref(eq:ar2) by $Y_{t-1}$ and obtain an expression for $\gamma_1$. Let's call this Eq. (b).
+Next multiply both sides of Equation @eq-ar2 by $Y_{t-1}$ and obtain an expression for $\gamma_1$. Let's call this Eq. (b).
 
 Solve Eq. (a) and (b) for $\gamma_0.$
 
@@ -344,7 +344,7 @@ Using algebraic manipulation, we can show that these roots will exceed 1 in modu
 
 ### Autocorrelation function of an AR(2) process
 
-To derive autocorrelation function of an AR(2) process we first multiply both sides of  Equation \@ref(eq:ar2) by $Y_{t-k}$ and take expected values:
+To derive autocorrelation function of an AR(2) process we first multiply both sides of  Equation @eq-ar2 by $Y_{t-k}$ and take expected values:
 
 
 \begin{align}
@@ -353,7 +353,7 @@ E(Y_tY_{t-k}) &= E(\phi_0Y_{t-k}+\theta_1Y_{t-1}Y_{t-k}+\theta_2Y_{t-2}Y_{t-k})+
 \end{align}
 
 
-Using the independence between $\epsilon_t$ and $Y_{t-1}$, $E(\epsilon_t Y_{t-k})=0$ and the results in Equation \@ref(eq:3) (This is valid for AR(2)) we have
+Using the independence between $\epsilon_t$ and $Y_{t-1}$, $E(\epsilon_t Y_{t-k})=0$ and the results in Equation @eq-3 (This is valid for AR(2)) we have
 
 $$\gamma_k + \mu^2 = \gamma_0 \mu + \theta_1 (\gamma_{k-1}+\mu^2)+\phi_2 (\gamma_{k-2}+\mu^2).$$
 
@@ -365,7 +365,7 @@ Solving for $\gamma_k$ we get
  \gamma_k=\phi_1\gamma_{k-1}+\phi_2\gamma_{k-2}.
 \end{align}
 
-By dividing the both sides of Equation \@ref(eq:eq9) by $\gamma_0$, we have
+By dividing the both sides of Equation @eq-eq9 by $\gamma_0$, we have
 
 \begin{align}
  \rho_k=\phi_1\rho_{k-1}+\phi_2\rho_{k-2}.
@@ -410,14 +410,14 @@ For stationarity of $AR(p)$ process, the $p$ roots of the AR characteristic must
 
 ### Autocorrelation function (ACF) of an AR(p) process
 
-**Question 5: ** Similar to the results in Equation \@ref(eq:yule2) for $AR(2)$ process, obtain the following recursive relationship for $AR(p)$. 
+**Question 5: ** Similar to the results in Equation @eq-yule2 for $AR(2)$ process, obtain the following recursive relationship for $AR(p)$. 
 
 \begin{align}
 \rho_k = \phi_1\rho_{k-1}+\phi_2 \rho_{k-2} + ... + \phi_p \rho_{k-p}.
 \end{align}
 
 
-Setting $k=1, 2, ..., p$ into Equation \@ref(eq:yulep) and using $\rho_0=1$ and $\rho_{-k}=\rho_k$, we get the Yule-Walker equations for $AR(p)$ process
+Setting $k=1, 2, ..., p$ into Equation @eq-yulep and using $\rho_0=1$ and $\rho_{-k}=\rho_k$, we get the Yule-Walker equations for $AR(p)$ process
 
 
 \begin{equation}
@@ -429,7 +429,7 @@ Setting $k=1, 2, ..., p$ into Equation \@ref(eq:yulep) and using $\rho_0=1$ and 
 \end{aligned}
 \end{equation}
 
-The Yule-Walker equations in \@ref(eq:13) can be written in matrix form as below.
+The Yule-Walker equations in @eq-13 can be written in matrix form as below.
 
 $$\left[\begin{array}
 {r}
@@ -499,7 +499,7 @@ $$\bm{\phi}=\bm{P_p^{-1}\rho_p}.$$
 ## The partial autocorrelation function (PACF)
 
 
-Let $\phi_{ki}$, the $j$th coefficient in an $AR(k)$ model. Then, $\phi_{kk}$ is the last coefficient. From Equation \@ref(eq:yulep), the $\phi_{kj}$ satisfy the set of equations
+Let $\phi_{ki}$, the $j$th coefficient in an $AR(k)$ model. Then, $\phi_{kk}$ is the last coefficient. From Equation @eq-yulep, the $\phi_{kj}$ satisfy the set of equations
 
 \begin{equation}
 \rho_j=\phi_{k1}\rho_{j-1}+...+\phi_{k(k-1)}\rho_{j-k+1}+\phi_{kk}\rho_{j-k},
@@ -612,18 +612,18 @@ $$\phi_{kk}=Corr(Y_tY_{t-k}|Y_{t-1}, Y_{t-2},..., Y_{t-k+1}).$$
 The partial autocorrelation between $Y_t$ and $Y_{t-k}$ is the correlation between $Y_t$ and $Y_{t-k}$ after removing the effect of the intermediate variables $Y_{t-1}, Y_{t-2}, ..., Y_{t-k+1}$.
 
 
-In general the determinant in the numerator of Equations \@ref(eq:p1), \@ref(eq:p2) and \@ref(eq:p3) has the same elements as that in the denominator, but replacing the last column with $\bm{\rho_k}= (\rho_1, \rho_2,...\rho_k).$
+In general the determinant in the numerator of Equations @eq-p1, @eq-p2 and @eq-p3 has the same elements as that in the denominator, but replacing the last column with $\bm{\rho_k}= (\rho_1, \rho_2,...\rho_k).$
 
 ### PACF for AR(1) models
 
-From Equation \@ref(eq:acfar1) we have 
+From Equation @eq-acfar1 we have 
 
 $\rho_k=\phi_1^k$ for $k=0, 1, 2, 3,...$
 
 Hence, for $k=1$, the first partial autocorrelation coefficient is
 
 $$\phi_{11}=\rho_1=\phi_1.$$
-From \@ref(eq:p2)  for $k=2$, the second partial autocorrelation coefficient is
+From @eq-p2  for $k=2$, the second partial autocorrelation coefficient is
 
 $$\phi_{22}=\frac{\rho_2-\rho_1^2}{1-\rho_1^2}=\frac{\phi_1^2-\phi_1^2}{1-\phi_1^2} = 0$$.
 
@@ -668,7 +668,7 @@ We can see both mean and variance are time-invariant.  $MA$ models are finite li
 
 #### Method 1
 
-To obtain the autocorrelation function of $MA(1)$, we first multiply both sides of Equation \@ref(eq:ma1) by $Y_{t-k}$ and take the expectation. 
+To obtain the autocorrelation function of $MA(1)$, we first multiply both sides of Equation @eq-ma1 by $Y_{t-k}$ and take the expectation. 
 
 \begin{equation}
 \begin{aligned}
@@ -701,7 +701,7 @@ Now we have
   E(Y_t Y_{t-k}) = \gamma_k + \theta_0^2.
 \end{equation}
 
-Using the Equations \@ref(eq:ma1acfs2) and \@ref(eq:covma1) we have
+Using the Equations @eq-ma1acfs2 and @eq-covma1 we have
 
 \begin{equation}
   \gamma_k = \theta_0^2 - \theta_0^2 + \theta_1E(\epsilon_{t-1}Y_{t-k}).
@@ -730,7 +730,7 @@ E(\epsilon_{t-1}Y_{t-1}) &= E(\epsilon_{t-1}^2)=\sigma^2\\
 \end{aligned}
 \end{equation}
 
-Substituting \@ref(eq:covma5) in \@ref(eq:covma3) we get
+Substituting @eq-covma5 in @eq-covma3 we get
 
 $$\gamma_1=\theta_1\sigma^2$$.
 
@@ -738,7 +738,7 @@ Furthermore, $\gamma_0 = Var(Y_t)=  (1+\theta_1^2)\sigma^2$. Hence
 
 $$\rho_1=\frac{\gamma_1}{\gamma_0}=\frac{\theta}{1+\theta_1^2}.$$
 
-When $k=2$, from Equation \@ref(eq:covma3)  and $E(\epsilon_{t-1}Y_{k-2}) = 0$ (future error and past observation) we get $\gamma_2=0$. Hence $\rho_2=0$. Similarly, we can show that
+When $k=2$, from Equation @eq-covma3  and $E(\epsilon_{t-1}Y_{k-2}) = 0$ (future error and past observation) we get $\gamma_2=0$. Hence $\rho_2=0$. Similarly, we can show that
 
 $$\gamma_k = \rho_k=0$$ for all $k \geq 2$.
 
